Bug 1362817 - Use PRTime instead of time_t in nsSimplePageSequenceFrame::Reflow. r=m_kato

The nsSimplePageSequenceFrame::Reflow calls DateTimeFormat::FormatTime().
In 32 bit environment, this conversion will overflow. So this patch will use
DateTimeFormat::FormatPRTime() instead of it.

MozReview-Commit-ID: 3b1GhlrJDKM